# scraper-eu-procurement

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/metabase/: SKILL.md  click-behavior.md  filters.md  mb.sh  visualization.md
awards/: countries.py  db.py  main.py  models.py  schema.py
awards/parsers/: __init__.py  codes.py  eforms_ubl.py  ted_v2.py  xml.py
awards/portals/: __init__.py
awards/portals/ted/: __init__.py  eforms_ubl.py  portal.py  ted_v2.py
docs/: AT.md  BE.md  BG.md  CH.md  CY.md  CZ.md  DE.md  DK.md  EE.md  ES.md  FI.md  FR.md  GB.md  GR.md  HR.md  HU.md  IE.md  IT.md  LT.md  LU.md  LV.md  MT.md  NL.md  NO.md  PL.md  PT.md  README.md  RO.md  SE.md  SI.md  SK.md
tedawards/: db.py  main.py  models.py  rates.py  schema.py  scraper.py
tedawards/parsers/: __init__.py  base.py  eforms_ubl.py  factory.py  monetary.py  ted_internal_ojs.py  ted_meta_xml.py  ted_v2.py  xml.py
tedawards/parsers/date/: __init__.py  iso.py  iso_offset.py  yyyymmdd.py
tedawards/parsers/monetary/: __init__.py  float_comma_decimal.py  float_comma_decimal_1.py  float_comma_decimal_4.py  float_dot_decimal.py  float_dot_decimal_1.py  float_doublespace_thousands.py  float_space_thousands.py  float_space_thousands_comma_1.py  float_space_thousands_comma_3.py  float_space_thousands_comma_4.py  (+2 more)
tedawards/portals/: __init__.py  ted.py
tests/: test_db.py  test_rates.py  test_scraper.py
tests/parsers/: test_eforms_ubl.py  test_factory.py  test_ted_internal_ojs.py  test_ted_meta_xml.py  test_ted_v2.py
(+22 files in other folders)
