[project]
name = "awards"
version = "0.1.0"
description = "TED Awards scraper for EU procurement contract awards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "lxml",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "python-dotenv",
    "click",
    "pydantic",
    "pytest>=8.4.2",
    "pycountry>=24.6.1",
]

[project.scripts]
awards = "awards.main:cli"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["awards*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
]
